--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv='cache-control' content='no-cache'>
+<meta http-equiv='expires' content='0'>
+<meta http-equiv='pragma' content='no-cache'>
   <title>Redirecting...</title>
   <!-- The meta tag below redirects after 0 seconds -->
-  <meta http-equiv="refresh" content="0; url=https://virallab.pro">
+  <meta http-equiv="refresh" content="0; url=https://colorwhistle.com/">
 </head>
 <body>
   <p>If you are not redirected, <a href="https://www.example.com">click here</a>.</p>
