--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         // Generate a unique short ID and short link
         const shortId = generateShortId();
-        const shortLink = `http://short.ly/${shortId}`;
+        const shortLink = `https://ritikpatidar9803.github.io/Redirect/${shortId}`;
 
         // Save the link to the GitHub-hosted file (this won't work directly)
         await saveLink(shortId, sourceLink, shortLink);
